gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kstacks-gateway
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  gatewayClassName: eg

  listeners:
    - name: https-wildcard
      protocol: HTTPS
      port: 443
      hostname: "*.kstacks.org"
      tls:
        mode: Terminate
        certificateRefs:
          - name: kstacks-api-tls
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway-access: "true"
    - name: https-apex
      protocol: HTTPS
      port: 443
      hostname: "kstacks.org"
      tls:
        mode: Terminate
        certificateRefs:
          - name: kstacks-api-tls
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway-access: "true"
    - name: http-wildcard
      protocol: HTTP
      port: 80
      hostname: "*.kstacks.org"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway-access: "true"
    - name: http-apex
      protocol: HTTP
      port: 80
      hostname: "kstacks.org"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway-access: "true"
